update_notifications_draft

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 
 <body>
+    <h1>NMM - Notifications Manager Module</h1>
+    <h2> Curso Javascript </h2>
+    <h3> Com. 65335 </h3>
+    <h4> Proyecto Final (DRAFT) </h4>
     <p>
-        <strong>NMM - Notifications Manager Module</strong>
+        <a href="https://amalaguti.github.io/js_65335_prj/" target="_blank"><strong>https://amalaguti.github.io/js_65335_prj/</strong></a>
     </p>
     <script src="notifications.js"></script>
 
