update_notifications - primera entrega

--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
     <h2> Curso Javascript </h2>
     <h3> Com. 65335 </h3>
     <h4> Proyecto Final (DRAFT) </h4>
-    <p>
-        <a href="https://amalaguti.github.io/js_65335_prj/" target="_blank"><strong>https://amalaguti.github.io/js_65335_prj/</strong></a>
-    </p>
+    <div>
+        <p>
+
+            <a href="https://github.com/amalaguti/js_65335_prj"
+                target="_blank"><strong>https://github.com/amalaguti/js_65335_prj</strong></a>
+        </p>
+    </div>
+    <div>
+        <p>
+            <a href="https://amalaguti.github.io/js_65335_prj/"
+                target="_blank"><strong>https://amalaguti.github.io/js_65335_prj/</strong></a>
+        </p>
+    </div>
     <script src="notifications.js"></script>
 
 </body>
