feat: show all notification status

--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
                     <h2>START</h2>
                 </div>
                     <div class="notification-list notification-list-start">
-                        <ul>
-                            <li>Notification 1</li>
-                            <li>Notification 2</li>
-                            <li>Notification 3</li>
-                        </ul>
+                        <!-- ul/li added by JS showStatusStart() -->
                     </div>
                 </div>
                 <div class="notification-panel notifications-running">
@@ -90,24 +86,15 @@
                     <h2>RUNNING</h2>
                 </div>
                     <div class="notification-list notification-list-running">
-                        <ul>
-                            <li>Notification 4</li>
-                            <li>Notification 5</li>
-                            <li>Notification 6</li>
-                        </ul>
+                        <!-- ul/li added by JS showStatusRunning() -->
                     </div>
-
                 </div>
                 <div class="notification-panel notifications-final">
                     <div>
                     <h2>FINAL</h2>
                 </div>
                     <div class="notification-list notification-list-final">
-                        <ul>
-                            <li>Notification 7</li>
-                            <li>Notification 8</li>
-                            <li>Notification 9</li>
-                        </ul>
+                        <!-- ul/li added by JS showStatusFinal() -->
                     </div>
                 </div>
                 <div class="notification-panel notifications-all">
@@ -116,6 +103,7 @@
                         <span class="btn-close" onclick="closeAll()">[X]</span>
                     </div>
                     <div class="notification-list notification-list-all">
+                        <!-- ul/li added by JS showAll() -->
                     </div>
                 </div>
             </div>
