feat: function new_notification()

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main>
             <div class="controls">
                 <div class="control-button ctrl-btn-new">
-                    <button id="btn-new" onclick="new()">
+                    <button id="btn-new" onclick="new_notification()">
                         <p>NEW <span>✨</span></p>
                     </button>
                 </div>
