feat: update status

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-start">
-                    <button id="btn-start" onclick="start()">
+                    <button id="btn-start" onclick="update_status()">
                         <p>START <span>🚀</span></p>
                     </button>
                 </div>
