feat: update status

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         <main>
             <div class="controls">
                 <div class="control-button ctrl-btn-new">
-                    <button id="btn-new" onclick="new_notification()">
-                        <p>NEW <span>✨</span></p>
+                    <button id="btn-new" class="btn-new">
+                        <p class="btn-new">NEW <span class="btn-new">✨</span></p>
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-start">
-                    <button id="btn-start" onclick="update_status()">
-                        <p>START <span>🚀</span></p>
+                    <button id="btn-start" class="btn-start">
+                        <p class="btn-start">START <span class="btn-start">🚀</span></p>
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-pause">
-                    <button id="btn-pause" onclick="pause()">
-                        <p>PAUSE <span>⏸️</span></p>
+                    <button id="btn-pause" class="btn-pause">
+                        <p class="btn-pause">PAUSE <span class="btn-pause">⏸️</span></p>
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-terminate">
-                    <button id="btn-terminate" onclick="terminate()">
-                        <p>TERMINATE <span>🛑</span></p>
+                    <button id="btn-terminate" class="btn-terminate">
+                        <p class="btn-terminate">TERMINATE <span class="btn-terminate">🛑</span></p>
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-info">
