feat: show notification info

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </button>
                 </div>
                 <div class="control-button ctrl-btn-info">
-                    <button id="btn-info" onclick="info()">
+                    <button id="btn-info">
                         <p>INFO <span>🔍</span></p>
                     </button>
                 </div>
