feat: remove notification

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <p>INFO <span>🔍</span></p>
                     </button>
                 </div>
-                <div class="control-button ctrl-btn-delete">
-                    <button id="btn-delete" onclick="delete()">
-                        <p>DELETE <span>🗑️</span></p>
+                <div class="control-button ctrl-btn-remove">
+                    <button id="btn-remove">
+                        <p>REMOVE <span>🗑️</span></p>
                     </button>
                 </div>
 
