feat: Add sweet alert library

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Sweet Alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Main JS -->
     <script src="main.js"></script>
+
+    <!-- Notifications JS -->
     <script src="notifications.js"></script>
+
     <link rel="stylesheet" href="./css/style.css">
+    
     <title>NMM - Notifications Manager Module</title>
 </head>
 
