feat: Separate welcome messages script file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Main JS -->
     <script src="main.js"></script>
 
+    <!-- Welcome messages -->
+    <script src="welcome.js"></script>
+    
     <!-- Notifications JS -->
     <script src="notifications.js"></script>
 
@@ -159,9 +162,9 @@
     </div>
 
 
-    <script>
+    <!-- DOM Interaction -->
+    <script src="dominteraction.js">
     </script>
-    <script src="dominteraction.js"></script>
 </body>
 
 </html>
