feat: add luxon script call

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- Main JS -->
     <script src="main.js"></script>
 
+    <!-- Luxon -->
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js"></script>
+    <script src="luxon.js"></script>
+    
     <!-- Notifications JS -->
     <script src="notifications.js"></script>
 
@@ -166,7 +170,7 @@
     <!-- DOM Interaction -->
     <script src="dominteraction.js">
     </script>
-
+    
 </body>
 
 </html>
