fix: cancel buttons do not update element

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </label>
                 </p>
                 <div>
-                    <button value="cancel" formmethod="dialog">Cancel</button>
+                    <button id="cancelBtn" value="cancel" formmethod="dialog">Cancel</button>
                     <button id="confirmBtn" value="default">Confirm</button>
                 </div>
             </form>
