--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             </div>
         </header>
         <main>
+            <div class="openNotification"> 
+            </div>
             <div class="controls">
                 <div class="control-button ctrl-btn-new">
                     <button id="btn-new" class="btn-new">
